add google maps

--- a/css/style.css
+++ b/css/style.css
@@ -621,6 +621,99 @@ section.sobre .txt-sobre2{
 }
 /**************************************/
 
+/******     >>>>> Contato <<<<<     ******/
+section.local-maps{
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 0;
+}
+
+/*local*/
+section.local-maps{
+    height: 100%;
+}
+
+section.local-maps .local{
+    width: 30%;
+    height: 500px;
+    padding: 40px 20px;
+    background-color: #262626;
+}
+
+.local .container{
+    width: 80%;
+}
+
+.local .container > div{
+    display: inline-block;
+    margin-right: 100px;
+}
+
+.local h2{
+    color: rgb(255, 251, 0);
+    font-weight: 500;
+    margin-bottom: 8px;
+}
+
+.local ul{
+    list-style-type: none;
+}
+
+.local ul li{
+    color: #fff;
+    font-weight: lighter;
+    font-size: 18px;
+    margin: 10px 0;
+}
+
+.local a{
+    font-size: 13px;
+    font-weight: 500;
+    font-style: italic;
+    text-transform: uppercase;
+    color: #000;
+    text-decoration: none;
+    border-radius: 3px;
+    background-color: rgb(255, 251, 0);
+    padding: 10px 15px;
+}
+
+/*maps*/
+section.local-maps .maps{
+    width: 70%;
+    height: 500px;
+    padding: 40px 20px;
+    background-color: rgb(255, 251, 0);
+}
+
+.maps .container{
+    width: 80%;
+}
+
+.maps h2{
+    font-size: 25px;
+    font-weight: 500;
+}
+
+.maps .maps-single{
+    margin-top: 10px;
+}
+
+.maps-single p{
+    font-weight: lighter;
+    font-size: 18px;
+}
+
+.map{
+    width: 70%;
+    padding-top: 50%;
+    background-color: #ccc;
+}
+/****************************************/
+
+
 /*>>> Responsivo | MediaQueries <<<*/
 @media screen and (max-width: 1240px){
     header .container{
