add funcionalidade para barra de filtro de precos

--- a/css/style.css
+++ b/css/style.css
@@ -452,7 +452,7 @@ aside.sidebar{
 }
 
 .search1 .barra-preco-fill{
-    width: 90%;
+    width: 0;
     height: 20px;
     position: absolute;
     top: -1px;
@@ -467,7 +467,7 @@ aside.sidebar{
     height: 30px;
     position: absolute;
     top: -5px;
-    left: 90%;
+    left: 0;
     transform: translate(-50%);
     border-radius: 5px;
     background-color: rgb(210, 210, 210);
